--- a/app/src/main/res/layout/row_message.xml
+++ b/app/src/main/res/layout/row_message.xml
@@ -9,6 +9,7 @@
         android:padding="5dp">
 
     <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/cardRow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
