--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             tools:layout_editor_absoluteX="24dp">
-            <EditText
+            <fr.iut.tp2_lp.EditorImage
                 android:id="@+id/inputEditText"
                 android:layout_weight="2"
                 android:inputType="textMultiLine"
