--- a/app/src/main/res/layout/row_message.xml
+++ b/app/src/main/res/layout/row_message.xml
@@ -22,12 +22,20 @@
                 android:padding="10dp"
                 android:layout_width="60dp"
                 android:layout_height="60dp"/>
-            <TextView
-                android:id="@+id/TV_2"
-                android:padding="10dp"
+            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:orientation="vertical"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-
+                android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/TV_2"
+                    android:padding="10dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+                <ImageView
+                    android:id="@+id/sendImage"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
         </LinearLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
