--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -9,4 +9,10 @@
     >
     </item>
 
+    <item android:id="@+id/action_gravtar"
+        android:title="@string/gravatar"
+        androidFollow:showAsAction="withText"
+        >
+    </item>
+
 </menu>
