--- a/app/src/main/res/layout/row_message_user.xml
+++ b/app/src/main/res/layout/row_message_user.xml
@@ -8,7 +8,10 @@
     android:clipToPadding="false"
     android:layout_gravity="right"
     android:gravity="right"
-    android:padding="5dp">
+    android:paddingLeft="75dp"
+    android:paddingRight="5dp"
+    android:paddingTop="5dp"
+    android:paddingBottom="5dp">
 
     <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/cardRow"
